# homebase

./: .gitignore  CHROMA_USAGE.md  CLAUDE.md  LICENSE  README.md  main.py  metadata.json  pyproject.toml  requirements-chroma.txt  stats.json
chroma_db/d92dba21-79d2-4e30-b71c-6da3c4bec1b9/: index_metadata.pickle
public/2020/: 2020-06-12-10yearsofautomationin1year.md  2020-06-26-dronesswarmsandstormsofdrones.md  2020-07-02-democratizingautomation.md  2020-07-10-onlinecoursesautomatingeducationanddigitalizingdeg.md  2020-07-17-automatingcodetwittershacksarobotnamedstretch.md  2020-07-24-recommendationsareagame-adangerousgameforus.md  2020-07-31-automatedhowalgorithmsshapeadayinthelifeandourfutu.md  2020-08-07-digitalcompaniesandthegoalofat-homeembodiedai.md  2020-08-21-theuncannyworldofrobotsathome.md  2020-08-28-canrobotsbeautonomousandunintelligent.md  2020-09-04-aiarbitrationoftruth.md  2020-09-11-autonomystartupsaresuchamess.md  2020-09-25-somethoughtsonteachinglearning.md  2020-10-02-modelssystemscodeandrobots.md  2020-10-09-whyphdstudentsarelonelierthanretirees.md  2020-10-16-whatismlforclimatechange.md  2020-10-30-towardsanethicsforroboticists.md  2020-11-06-constructingaxesforreinforcementlearningpolicy.md  2020-11-13-thecollingridgedilemmaandcurrentpolicyonrobots.md  2020-12-11-facebookcasestudyusingaitoregulatethedigitalecosys.md  2020-12-18-theubiquityandfutureofmodel-basedreinforcementlear.md  (+1 more)
scripts/: chroma_search.py  claude_search_tool.py  ensure_indexed.py  generate_metadata.py  process_posts.py  quick_stats.py  reorganize_images.py  stats.py
(+175 files in other folders)
